[package]
name = "eosio_cdt"
version = "0.1.0"
authors = ["Leo Ribeiro <leordev@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
bindgen = "0.51.1"

[dependencies]
bytes = "0.5.3"
bincode = { path = "../bincode" }
serde = { version = "1.0.63", features = ["derive"] }
serde-big-array = "0.2.0"
generic-array = { version = "0.13.2", features = ["serde"] }
