[package]
name = "eosio_cdt"
version = "0.1.0"
authors = ["Leo Ribeiro <leordev@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
bindgen = "0.51.1"

[dependencies]
bincode = { path = "../bincode" }
serde = { version = "1.0.63", features = ["derive"] }
generic-array = { version = "0.13.2", features = ["serde"] }
eosio_cdt_macro = { path = "./eosio_cdt_macro" }
