[package]
name = "fill-x"
version = "0.1.0"
authors = ["Lucas Fonseca <lucas.fonseca@block.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
websocket = "*"
serde_json = "1.0.44"
eosio_cdt = { path = "../../crates/eosio_cdt" }
state_history = { path = "../../crates/state_history" }

[workspace]